# black-dwarf

./: .gitignore  BD.toml  C.toml  Cargo.toml  README.md
eg/: C.toml  pomodoro.c
eg/grow/: grow.h  seed.c  soil.c  water.c
eg/tomato/: beefmaster.c  san_marzano.c  tomato.h
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: compiler.rs  error.rs  from-stdin.rs  lib.rs  main.rs  project.rs  toml.rs  util.rs
tests/: BD.toml  single_file.toml
tests/should_fail/: non_string_in_fg.toml  non_string_in_fg2.toml  unknown_fg_in_fg.toml  unknown_fg_in_target.toml
tests/toml/: Cargo.lock.toml  Cargo.toml  after_multiline_not_in_top_level.toml  appends.toml  array.toml  array_in_table_key.toml  bools.toml  dates.toml  dotted_and_not.toml  dotted_key.toml  empty.toml  empty_inline_table.toml  empty_table_within_array.toml  escapes.toml  header_is_a_table.toml  header_paths.toml  inline_table_in_array.toml  kv.toml  kv2.toml  many_array.toml  multiline_array_element.toml  multiline_array_element_path.toml  numbers.toml  pmb-cargo-lock.toml  quote_in_table_name.toml  recursion_limit.toml  repeated.toml  rude_comments.toml  space.toml  spec.toml  string-array.toml  thevoid.toml  tricky.toml
tests/toml/should_fail/: double_dots_in_number.toml  non_table.toml  non_utf8_in_date.toml  not_array.toml  recursion_limit.toml  repeated_non_table.toml  too_many_close_brace.toml  too_many_close_bracket.toml  too_many_dots.toml  unterminated_array.toml  unterminated_string.toml  weird_date.toml  weird_date2.toml  weird_date3.toml
