[package]
name = "black-dwarf"
version = "0.1.0"
edition = "2021"
default-run = "black-dwarf"

[dependencies]
indexmap = "2.2.5"
unicode-segmentation = "1.11.0"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
argh = "0.1.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.57"
