[package]
name = "cretaceous"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "2.2.5"
unicode-segmentation = "1.11.0"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
argh = "0.1.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.57"
dirs = "5.0.1"
subprocess = "0.2.9"
macros = { path = "macros" }

[features]
dev = []
default = ["dev"]
