#--{
#--    "package": {
#--        "name": "black-dwarf",
#--        "version": "0.1.0",
#--        "edition": "2021",
#--    },
#--    "dependencies": {
#--        "indexmap": "1.9.2",
#--    },
#--    "dev-dependencies": {
#--        "diff": "0.1",
#--    },
#--}

[package]
name = 'black-dwarf'
version = '0.1.0'
edition = '2021'

[dependencies]
indexmap = '1.9.2'

[dev-dependencies]
diff = '0.1'
